wip: fix closed main collapse in map menu

--- a/frontend/src/map/menu/MapMenu.scss
+++ b/frontend/src/map/menu/MapMenu.scss
@@ -67,7 +67,7 @@
             overflow-y: hidden;
         }
 
-        .collapse-closed > .collapse-content {
+        &.collapse-closed > .collapse-content {
             max-height: 0 !important;
             height: 0;
         }
